[package]
name = "crab-tunnel-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crab-tunnel-server"
path = "src/main.rs"

[dependencies]
crab-tunnel-core = { path = "../crab-tunnel-core" }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
